# autoMate

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  LICENSE  PRODUCTION.md  README.md  README_CN.md  README_EN.md  README_JA.md  SUPPORT_MODEL.md  TROUBLESHOOTING.md  auto.py  benchmark.py  cli.py  cloud_vision.py  config.yaml.tmp  config_tmp.yaml  install.py  main.py  main.spec  mcp_server.py  o_kr.py  okr_define.py  omniserver.py  package-lock.json  package.bat  package.json  package.sh  pyproject.toml  pytest.ini  requirements.txt  server.py  task_demonstration.json  temp_method.py  types.d.ts  vision.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml  publish.yml  test.yml
.huggingface/: config.json
actions/: action_base.py  action_list.py  action_list_item.py  action_signal.py  action_util.py  arg_type.py  llm_action.py  loop_action.py  open_application_action.py  open_browser_url_action.py  python_executor_action.py  search_engine_action.py  test_code.py  test_word_action.py  word_action.py
actions/word_actions/: table_action.py
agent/: agent.py  agent_base.py  gemma.py  manager_agent.py  plan_agent.py  programmer_agent.py  prompt.py  require_alignment_agent.py  system_prompt.py  woker_agent.py
app/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  types.d.ts
app/src/main/: app.ts  autoUpdater.ts  createWindow.ts  index.ts  ipc.ts  serverUtilts.ts  shortCut.ts  updateRegister.ts  windows.ts
app/src/preload/: index.d.ts  index.ts
autoMate/: main.py
autoMate/actions/: actions.py
autoMate/agents/: Agent.py  architect_agent.py  manager_agent.py
autoMate/tests/: test_models.py  test_runner.py
autoMate/utils/: code_utils.py  config.py  logging_utils.py  models.py  openai_utils.py  prompts.py  task_utils.py
auto_control/: app.py  llm_client.py  loop.py
auto_control/agent/: base_agent.py  few_shot_generate_agent.py  task_plan_agent.py  task_run_agent.py  vision_agent.py
auto_control/executor/: anthropic_executor.py
auto_control/tools/: base.py  computer.py  screen_capture.py
core/: __init__.py  engine.py  learner.py  locators.py  script.py  script_manager.py
data_class/: search_data.py
functions/: function_base.py  function_list.py  llm_func.py  open_application_func.py  open_application_func_config_page.py  open_application_tool.py  open_browser_url_func.py  search_engine_func.py
gradio_ui/: app.py  app_new.py  loop.py  loop_new.py
gradio_ui/agent/: anthropic_agent.py  base_agent.py  task_plan_agent.py  task_run_agent.py  verification_agent.py  vision_agent.py  vlm_agent.py  vlm_agent_new.py
gradio_ui/executor/: anthropic_executor.py
gradio_ui/tools/: __init__.py  computer.py  screen_capture.py
gradio_ui/utils/: __init__.py  caching.py  error_handler.py  logger.py  monitoring.py  persistence.py  security.py  validation.py
pages/: action_config_page.ui  action_list_view.py  bse_page.py  chat_list.py  chat_page.py  chat_page.ui  chat_page2.ui  config_page.py  config_page.ui  edit_action_list_view.py  edit_function_page.py  edit_page.py  edit_page.ui  func_list_page.py  func_list_page.ui  global_util.py  include_action_ui.py  login_page.py  plugin_page.py  plugin_page.ui  python_code_render.py  python_execute.py  setting_page.ui  styled_item_delegate.py  untitled.ui
processor/: preprocessor_config.json  tokenizer.json  tokenizer_config.json
pyqt_gui/: __init__.py  main.py
pyqt_gui/gui/: __init__.py  chat_panel.py  main_window.py  screenshot_viewer.py  settings_panel.py  task_panel.py
pyqt_gui/worker/: __init__.py  signals.py  task_worker.py
self_utils/: config.py  llm_util.py  qt_util.py  selenium_util.py
server/: .gitignore  main.py  main.spec  my_app.spec  requirements.txt
server/agent/: code_agent.py  prompt.py
server/route/: code_executor.py  llm.py  shutdown.py  test.py
server/utils/: sql_util.py
src/: __init__.py  main.py
src/assets/: __init__.py
src/core/: __init__.py  conversation_manager.py  few_shot_agent.py  input_listener.py  recorder_manager.py  voice_recorder.py  workflow_extractor.py
src/main/: index.ts  shortCut.ts  windows.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/ui/: __init__.py  chat_area.py  input_area.py  main_window.py  message_widgets.py  mini_window.py  profile_widget.py  recorder_panel.py
src/utils/: __init__.py  audio_recorder.py  screenshot.py
tests/: __init__.py  conftest.py  pytest.in  test_baidu_api.py  test_base_model.py  test_feishu.py  test_langchain.py  test_path.py  test_plan_agent.py  test_web_browser.py
tests/integration/: __init__.py  test_engine.py  test_workflow.py
tests/unit/: __init__.py  test_agents.py  test_executor.py  test_mcp_tools.py  test_script.py  test_tools.py
tools/: FindDesktopPath.py  ListAllFile.py  ListDesktopFiles.py  OpenApplication.py  base_tool.py  feishu_tool.py  init.py  llm_tools.py  search_engine_tool.py  tool_base.py  tools_base.py  tools_factory.py  tools_util.py  web_browser_element_tools.py  web_browser_tool.py  web_browser_tools.py  web_browser_url_tools.py
ui/: .gitignore  __init__.py  agent_worker.py  chat_panel.py  demonstration_panel.py  hotkey_edit.py  login.ui  main.js  main.py  main_window.py  package-lock.json  package.json  recording_manager.py  recording_panel.py  settings_dialog.py  settings_manager.py  task_panel.py  theme.py  tray_icon.py
ui/autoMate/: dev-app-update.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  types.d.ts
util/: auto_control.py  auto_util.py  box_annotator.py  config.json  download_weights.py  omniparser.py  opencv._detect.py  screen_selector.py  tool.py  utils.py  vision_agent.py  wechat_auto.py
utils/: config.py  feishu_util.py  global_keyboard_listen.py  global_util.py  llm_util.py  qt_util.py  selenium_util.py  undo_command.py  window_util.py
work_principle/: five_w_two_h.py  object_components.py  okr_principle.py  smart_principle.py
(+154 files in other folders)
