[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Package metadata
# ---------------------------------------------------------------------------
[project]
name = "automate-mcp"
version = "0.2.0"
description = "AI-powered desktop automation as an MCP server — control your desktop from Claude Desktop, Cursor, Windsurf and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "automation", "rpa", "desktop", "ai", "claude", "openai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Desktop Environment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]

# Core dependencies — lightweight, no GPU required
dependencies = [
    "mcp[cli]>=1.0.0",
    "openai>=1.50.0",
    "anthropic[bedrock,vertex]>=0.37.1",
    "pyautogui>=0.9.54",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "pynput",
    "pyperclip",
    "click>=8.0",
    "rich>=13.0",
]

# ---------------------------------------------------------------------------
# Optional extras
# ---------------------------------------------------------------------------
[project.optional-dependencies]
# Full vision stack (YOLO-based OmniParser element detection)
vision = [
    "torch",
    "torchvision",
    "ultralytics==8.3.70",
    "supervision==0.18.0",
    "numpy==1.26.4",
    "timm",
    "einops==0.8.0",
    "opencv-python",
    "modelscope",
]
# Everything (core + vision)
full = [
    "automate-mcp[vision]",
]

# ---------------------------------------------------------------------------
# Entry points
# ---------------------------------------------------------------------------
[project.scripts]
# Start the MCP server (used by Claude Desktop / Cursor / Windsurf via uvx)
automate-mcp = "mcp_server:main"

# ---------------------------------------------------------------------------
# Links
# ---------------------------------------------------------------------------
[project.urls]
Homepage   = "https://github.com/yuruotong1/autoMate"
Repository = "https://github.com/yuruotong1/autoMate"
Issues     = "https://github.com/yuruotong1/autoMate/issues"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["auto_control*", "core*", "util*"]

[tool.setuptools]
# Standalone root-level modules to include in the wheel
py-modules = ["mcp_server", "cli"]
